<resources>
    <string name="app_name">Clew</string>
    <string name="single_use_route">Single Use Route</string>
    <string name="save_route">Save Route</string>
    <string name="saved_routes_list">Saved Routes List</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="ga_shortcuts">Google Shortcuts</string>
    <string name="contact_us">Contact Us</string>
    <string name="depth_use_explanation" translatable="false">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string name="button_text_enable_depth" translatable="false">Enable</string>
    <string name="button_text_disable_depth" translatable="false">Disable</string>
    <string name="options_title_with_depth" translatable="false">Your device supports depth</string>
    <string name="options_title_without_depth" translatable="false">Your device does not support depth</string>
    <string name="done" translatable="false">Done</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string-array name="depth_options_array" translatable="false">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>
    <string name="options_title_instant_placement" translatable="false">Instant Placement options</string>
    <string name="gear">TODO</string>
    <string-array name="instant_placement_options_array" translatable="false">
        <item>Enable Instant Placement</item>
    </string-array>
</resources>