<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_tutorial"
            android:title="@string/tutorial" />
        <item
            android:id="@+id/nav_siri_shortcuts"
            android:icon="@drawable/ic_siri_shortcuts"
            android:title="@string/siri_shortcuts" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_us" />
    </group>
</menu>